Set up layout for site, started some css styling

--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DTC 477 Caelin Conner</title>
+    <link rel="stylesheet" href="styles.css" media="all">
+</head>
+
+<body>
+
+    <header>
+        <h1>Hello World, I'm Caelin.</h1>
+    </header>
+
+    <main>
+
+        <section id="courseworkLinks">
+            <h2>Coursework Links</h2>
+            <p><a href="https://github.com/Simply-Spinach/Simply-Spinach.github.io">Github repository</a></p>
+            <p>Tiny Projects:</p>
+            <ol start="4">
+                <li>Tiny Project 4</li>
+                <li>Tiny Project 5</li>
+                <li>and so on</li>
+            </ol>
+            <p><a href="#">Major Project</a></p>
+        </section>
+
+        <section id="randomQuestion">
+            <h2>Answering a Random Question</h2>
+            <p>Would you rather be the smartest moron or dumbest genius?</a> The best solutions tend to be the dumbest and therefore simplest solutions.
+            So easily dumbest genius</p>
+        </section>
+
+        <section id="boringFact">
+            <h2>Really Boring Fact About Me</h2>
+            <p>My favorite pizza is the surpreme one that has all the toppings on it</p>
+        </section>
+
+        <section id="slangThatNeedsToGo">
+            <h2>Modern Slang I Wish Would Go Away</h2>
+            <p><strong>Slang:</strong> type word or phrase here</p>
+            <p><strong>Definition:</strong> what it means</p>
+            <p><strong>Why I Don't Like It:</strong> explain your reasons</p>
+        </section>
+
+        <section id="interestingArticle">
+            <h2>Recent Article I Liked</h2>
+            <p><strong>Article:</strong> <a href="https://www.theneuron.ai/explainer-articles/do-you-need-to-threaten-ai-to-get-better-results-we-investigated-so-you-dont-have-to">Do you Need to Threaten AI to get Better Results?</a></p>
+            <p><strong>Why I Liked It:</strong> Ever since I learned AI works best with threats, I've been curious about it and this article covers rather well how effective it is compared to other methods</p>
+            <p> It turns out, it is more effective to treat it like it has a lot of time to come up with the best solution (because in the AI's eyes, it does).</p>
+        </section>
+
+        <section id="coolPic">
+            <h2>Cool Picture I Found on Unsplash.com</h2>
+            <p><img src="Aleksandr_Zaitsev_typewritter.avif" alt="A modern-esque looking vintage typewritter with an orange key"></p>
+            <p><strong>Credit:</strong> <a href='https://unsplash.com/photos/close-up-of-a-vintage-typewriter-with-an-orange-key-Crl1DzTGzDU'>Aleksandr Zaitsev</a></p>
+        </section>
+
+    </main>
+
+</body>
+
+</html>
