Added extreme mobile variant that just turns it back into a list (default layout)

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
         <section id="slangThatNeedsToGo">
             <h2>Modern Slang I Wish Would Go Away</h2>
-            <p><strong>Slang:</strong> type word or phrase here</p>
-            <p><strong>Definition:</strong> what it means</p>
-            <p><strong>Why I Don't Like It:</strong> explain your reasons</p>
+            <p><strong>Slang:</strong> Cap </p>
+            <p><strong>Definition:</strong> True, right </p>
+            <p><strong>Why I Don't Like It:</strong> It's the same word as hat, and is barely used with enough context for you to tell it means hat </p>
         </section>
 
         <section id="interestingArticle">
