Changed some language lightly under Definition in Slang

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section id="slangThatNeedsToGo">
             <h2>Modern Slang I Wish Would Go Away</h2>
             <p><strong>Slang:</strong> Cap </p>
-            <p><strong>Definition:</strong> True, right </p>
+            <p><strong>Definition:</strong> Truth, right </p>
             <p><strong>Why I Don't Like It:</strong> It's the same word as hat, and is barely used with enough context for you to tell it means hat </p>
         </section>
 
