Finished Concentration demo

--- a/tp5/index.html
+++ b/tp5/index.html
@@ -28,10 +28,103 @@
         </h1>
     </header>
     <main id="game_grid">
-        <div id="card_0">
-            <div class="card_back"> </div>
-            <div class="face_0"></div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_0"></div>
+            </div>
         </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_1"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_2"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_3"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_4"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_5"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_6"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_7"></div>
+            </div>
+        </div>
+                <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_0"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_1"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_2"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_3"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_4"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_5"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_6"></div>
+            </div>
+        </div>
+        <div class='card'>
+            <div class="card_content">
+                <div class="card_back"> </div>
+                <div class="face face_7"></div>
+            </div>
+        </div>
+        
     </main>
 </body>
 </html>
