Updated tic-tac-toe to use icons intead of text for wins

--- a/tp4/index.html
+++ b/tp4/index.html
@@ -43,10 +43,10 @@
 
     <div id='score_counter'>
         <div id="o_counter">
-            <strong> O wins: </strong> 0
+            <strong> <img src='images/o.png'> wins: </strong> 0
         </div>
         <div id="x_counter">
-            <strong> X wins: </strong> 0
+            <strong> <img src='images/x.png'> wins: </strong> 0
         </div>
     </div>
 </body>
